--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="/src/js/all.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./src/js/all.js"></script>
     <title>About Me</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <h2>ABOUT ME</h2>
         <div class="body">
             <div>
-                <img class="avatar" src="/src/image/avatar.jpg">
+                <img class="avatar" src="./src/image/avatar.jpg">
                 <center>
                     <span>Tiểu sử</span>
                     <span>Một chiếc Fullstack developer<br><br>osu!: <a href="https://osu.ppy.sh/users/29663130">https://osu.ppy.sh/users/29663130</a></span>
@@ -24,7 +24,7 @@
             <div>
                 <center><span>Renai Circulation | Kana Hanazawa</span></center>
                 <audio class="audio" controls autoplay loop>
-                    <source src="/src/music/Renai Circulation - Kana Hanazawa.mp3" type="audio/mpeg">
+                    <source src="./src/music/Renai Circulation - Kana Hanazawa.mp3" type="audio/mpeg">
                     Trình duyệt của bạn không hỗ trợ audio
                 </audio>
             </div>
