--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
         <div class="body">
             <div>
                 <img class="avatar" src="./src/image/avatar.jpg">
+                <center><span>Tên: MineHighVN</span>
+                    <span>Ngày/tháng/năm sinh: 26/9/2009</span></center>
                 <center>
-                    <span>Tiểu sử</span>
-                    <span>Một chiếc Fullstack developer<br><br>osu!: <a href="https://osu.ppy.sh/users/29663130">https://osu.ppy.sh/users/29663130</a></span>
+                    <span style="margin-top: 10px">Một chiếc Fullstack developer<br><br>osu!: <a href="https://osu.ppy.sh/users/29663130">https://osu.ppy.sh/users/29663130</a></span>
                 </center>
-                <span style="margin-top: 10px">Tên: MineHighVN</span>
-                <span>Ngày/tháng/năm sinh: 26/9/2009</span>
             </div>
             <div>
                 <center><span>Renai Circulation | Kana Hanazawa</span></center>
