--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             </div>
         </div>
     </div>
+    <div class="project">
+        <h2>MY PROJECT</h2>
+        <div class="body">
+            <p>CommandMC [Không còn phát triển]: <a href="https://minehighvn.github.io/commandmc">Truy cập</a></p>
+            <p>Minecraft Wiki [Đang phát triển]: <a href="https://minehighvn.github.io/zinfa">Truy cập</a></p> 
+        </div>
+    </div>
     <script>
         const copydiscord = async () => {
             await navigator.clipboard.writeText("MineHighVN#7269");
