--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <h2>MY PROJECT</h2>
         <div class="body">
             <p>CommandMC [Không còn phát triển]: <a href="https://minehighvn.github.io/commandmc">Truy cập</a></p>
-            <p>Minecraft Wiki [Đang phát triển]: <a href="https://minehighvn.github.io/zinfa">Truy cập</a></p> 
+            <p>Zinfa [Đang phát triển]: <a href="https://minehighvn.github.io/zinfa">Truy cập</a></p> 
+            <p>MySecret [Hoàn thành]: <a href="https://minehighvn.github.io/mysecret">Truy cập</a></p> 
         </div>
     </div>
     <script>
